fix list item spacing issue

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -19,6 +19,11 @@
     width: 50%
     padding: 10px 50px 20px 20px
     @include box-sizing-border
+    .step-directions
+      li
+      p
+        margin: 0px
+      font-size: 16px
   .step-img-col
     float: right
     width: 50%
@@ -60,13 +65,5 @@
     margin-top: 0px
     .step_title
       font-size: 24px
-
-.step-directions
-  line-height: 1.6em
-  li
-    margin-top: 0.8em
-  p
-    margin-top: 0
-  font-size: 16px
 
 
